adapting paths to local infrastructure

--- a/Annotate_Babesia_duncani.ipynb
+++ b/Annotate_Babesia_duncani.ipynb
@@ -21,13 +21,13 @@
     "\n",
     "## Data\n",
     "\n",
-    "The genome is available at [/home/genomics/workshop_materials/genome_annotation/genome/genome.fa](/home/genomics/workshop_materials/genome_annotation/genome/genome.fa). We will be using the repeat masking provided by NCBI.\n",
+    "The genome is available at [/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/genome/genome.fa](/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/genome/genome.fa). We will be using the repeat masking provided by NCBI.\n",
     "\n",
-    "We downloaded and aligned the library SRR18907291 from [Sequence Read Archive](https://www.ncbi.nlm.nih.gov/sra). (Paired-end Illumina library, Hisat2 aligner, converted and sorted with Samtools, selected aligned reads with Samtools to reduce bam file size.) It is not feasible that we process this data set during the workhop. We provide the file [/home/genomics/workshop_materials/genome_annotation/sra/SRR18907291.s.mapped.bam](/home/genomics/workshop_materials/genome_annotation/sra/SRR18907291.s.mapped.bam).\n",
+    "We downloaded and aligned the library SRR18907291 from [Sequence Read Archive](https://www.ncbi.nlm.nih.gov/sra). (Paired-end Illumina library, Hisat2 aligner, converted and sorted with Samtools, selected aligned reads with Samtools to reduce bam file size.) It is not feasible that we process this data set during the workhop. We provide the file [/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/sra/SRR18907291.s.mapped.bam](/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/sra/SRR18907291.s.mapped.bam).\n",
     "\n",
-    "In terms of OrthoDB taxonomy, the Alveolata partition is \"the closest\" for this species, available at [/home/genomics/workshop_materials/genome_annotation/orthodb/Alveolata.fa](/home/genomics/workshop_materials/genome_annotation/orthodb/Alveolata.fa). This is a rather \"small\" partition, and a priori, we do not know whether it will be sufficient for running BRAKER3 or BRAKER2 if used as the only protein input. We recommend combining it with proteins of other *Babesia* species (see below).\n",
+    "In terms of OrthoDB taxonomy, the Alveolata partition is \"the closest\" for this species, available at [/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/orthodb/Alveolata.fa](/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/orthodb/Alveolata.fa). This is a rather \"small\" partition, and a priori, we do not know whether it will be sufficient for running BRAKER3 or BRAKER2 if used as the only protein input. We recommend combining it with proteins of other *Babesia* species (see below).\n",
     "\n",
-    "Proteomes of other *Babesia* species were downloaded from NCBI, they were concatenated, and the fasta headers have been replaced by short, simple, and unique headers. The resulting file to be used with GALBA is available at [/home/genomics/workshop_materials/genome_annotation/proteins/proteins.fa](/home/genomics/workshop_materials/genome_annotation/proteins/proteins.fa). \n",
+    "Proteomes of other *Babesia* species were downloaded from NCBI, they were concatenated, and the fasta headers have been replaced by short, simple, and unique headers. The resulting file to be used with GALBA is available at [/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/proteins/proteins.fa](/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/proteins/proteins.fa). \n",
     "\n",
     "## What to expect?\n",
     "\n",
@@ -36,7 +36,7 @@
     "We applied BUSCO to the genome as follows:\n",
     "\n",
     "```\n",
-    "busco -m genome -i genome.fa -o busco_genome -l aconoidasida_odb10\n",
+    "busco -m genome -i genome.fa -o busco_genome -l alveolata_odb10\n",
     "```\n",
     "\n",
     "and obtained this output:\n",
@@ -74,7 +74,7 @@
     "\n",
     "## Questions to all groups (with respect to the assigned task)\n",
     "\n",
-    "1. After executing the annotation task assigned to you, apply BUSCO to estimate proteome completentess (use [/home/genomics/workshop_materials/genome_annotation/aconoidasida_odb10](/home/genomics/workshop_materials/genome_annotation/aconoidasida_odb10)). What are the BUSCO scores?\n",
+    "1. After executing the annotation task assigned to you, apply BUSCO to estimate proteome completentess (use [/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/busco/alveolata_odb10](/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/busco/alveolata_odb10)). What are the BUSCO scores?\n",
     "\n",
     "2. How many genes and how many transcripts are predicted?\n",
     "\n",
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert code to execute gene finder"
+    "# insert code to execute gene finder, you have to remove this line"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert code to analyze results"
+    "# insert code to analyze results, you have to remove this line"
    ]
   },
   {
@@ -139,8 +139,8 @@
     "    rm -rf GALBA_babesia\n",
     "fi\n",
     "\n",
-    "time galba.pl --workingdir=GALBA_babesia --genome=/home/genomics/workshop_materials/genome_annotation/genome/genome.fa \\\n",
-    "    --prot_seq=/home/genomics/workshop_materials/genome_annotation/proteins/proteins.fa \\\n",
+    "time galba.pl --workingdir=GALBA_babesia --genome=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/genome/genome.fa \\\n",
+    "    --prot_seq=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/proteins/proteins.fa \\\n",
     "    --threads=${T} \\\n",
     "    --skipOptimize\n",
     "```\n",
@@ -161,9 +161,9 @@
     "then\n",
     "    mkdir busco_downloads\n",
     "    cd busco_downloads\n",
-    "    if [ ! -L  aconoidasida_odb10 ]\n",
+    "    if [ ! -L  alveolata_odb10 ]\n",
     "    then\n",
-    "        ln -s /home/genomics/workshop_materials/genome_annotation/busco/aconoidasida_odb10 aconoidasida_odb10\n",
+    "        ln -s /data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/busco/alveolata_odb10 alveolata_odb10\n",
     "    fi\n",
     "    cd ..\n",
     "fi\n",
@@ -176,7 +176,7 @@
     "\n",
     "# run BUSCO\n",
     "busco -m proteins -i galba.aa -o busco_galba_babesia \\\n",
-    "        -l aconoidasida_odb10 -c ${T} &> busco_galba_babesia.log\n",
+    "        -l alveolata_odb10 -c ${T} &> busco_galba_babesia.log\n",
     "\n",
     "# Count number of transcripts by counting FASTA headers\n",
     "echo \"Counting number of protein sequences = transcripts\"\n",
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert code to execute gene finder"
+    "# insert code to execute gene finder, you have to remove this line"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert code to analyze results"
+    "# insert code to analyze results, you have to remove this line"
    ]
   },
   {
@@ -235,13 +235,13 @@
     "    rm -rf BRAKER3_babesia\n",
     "fi\n",
     "\n",
-    "ORTHODB=/home/genomics/workshop_materials/genome_annotation/orthodb/Alveolata.fa # adjust to suitable clade\n",
+    "ORTHODB=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/orthodb/Alveolata.fa # adjust to suitable clade\n",
     "\n",
     "# run BRAKER3\n",
-    "time braker.pl --workingdir=BRAKER3_babesia --genome=/home/genomics/workshop_materials/genome_annotation/genome/genome.fa \\\n",
-    "    --bam=/home/genomics/workshop_materials/genome_annotation/sra/SRR18907291.s.mapped.bam \\\n",
-    "    --prot_seq=${ORTHODB},/home/genomics/workshop_materials/genome_annotation/proteins/proteins.fa \\\n",
-    "    --busco_lineage=aconoidasida_odb10 --threads ${T} \\\n",
+    "time braker.pl --workingdir=BRAKER3_babesia --genome=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/genome/genome.fa \\\n",
+    "    --bam=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/sra/SRR18907291.s.mapped.bam \\\n",
+    "    --prot_seq=${ORTHODB},/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/proteins/proteins.fa \\\n",
+    "    --busco_lineage=alveolata_odb10 --threads ${T} \\\n",
     "    --skipOptimize\n",
     "```\n",
     "\n",
@@ -261,9 +261,9 @@
     "then\n",
     "    mkdir busco_downloads\n",
     "    cd busco_downloads\n",
-    "    if [ ! -L aconoidasida_odb10 ]\n",
+    "    if [ ! -L alveolata_odb10 ]\n",
     "    then\n",
-    "        ln -s /home/genomics/workshop_materials/genome_annotation/busco/aconoidasida_odb10 aconoidasida_odb10\n",
+    "        ln -s /data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/busco/alveolata_odb10 alveolata_odb10\n",
     "    fi\n",
     "    cd ..\n",
     "fi\n",
@@ -276,7 +276,7 @@
     "\n",
     "# run BUSCO\n",
     "busco -m proteins -i braker.aa -o busco_braker3_babesia \\\n",
-    "        -l aconoidasida_odb10 -c ${T} &> busco_braker3_babesia.log\n",
+    "        -l alveolata_odb10 -c ${T} &> busco_braker3_babesia.log\n",
     "\n",
     "# Count number of transcripts by counting FASTA headers\n",
     "echo \"Counting number of protein sequences = transcripts\"\n",
@@ -301,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert code to execute gene finder"
+    "# insert code to execute gene finder, you have to remove this line"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert code to analyze results"
+    "# insert code to analyze results, you have to remove this line"
    ]
   },
   {
@@ -335,13 +335,13 @@
     "    rm -rf BRAKER2_babesia\n",
     "fi\n",
     "\n",
-    "ORTHODB=/home/genomics/workshop_materials/genome_annotation/orthodb/Alveolata.fa # adjust to suitable clade\n",
+    "ORTHODB=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/orthodb/Alveolata.fa # adjust to suitable clade\n",
     "\n",
     "# run BRAKER2\n",
     "time braker.pl --workingdir=BRAKER2_babesia \\\n",
-    "    --genome=/home/genomics/workshop_materials/genome_annotation/genome/genome.fa \\\n",
-    "    --prot_seq=${ORTHODB},/home/genomics/workshop_materials/genome_annotation/proteins/proteins.fa \\\n",
-    "    --busco_lineage=aconoidasida_odb10 --threads ${T} \\\n",
+    "    --genome=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/genome/genome.fa \\\n",
+    "    --prot_seq=${ORTHODB},/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/proteins/proteins.fa \\\n",
+    "    --busco_lineage=alveolata_odb10 --threads ${T} \\\n",
     "    --skipOptimize\n",
     "```\n",
     "\n",
@@ -361,9 +361,9 @@
     "then\n",
     "    mkdir busco_downloads\n",
     "    cd busco_downloads\n",
-    "    if [ ! -L aconoidasida_odb10 ]\n",
+    "    if [ ! -L alveolata_odb10 ]\n",
     "    then\n",
-    "        ln -s /home/genomics/workshop_materials/genome_annotation/busco/aconoidasida_odb10 aconoidasida_odb10\n",
+    "        ln -s /data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/busco/alveolata_odb10 alveolata_odb10\n",
     "    fi\n",
     "    cd ..\n",
     "fi\n",
@@ -376,7 +376,7 @@
     "\n",
     "# run BUSCO\n",
     "busco -m proteins -i braker.aa -o busco_braker2_babesia \\\n",
-    "        -l aconoidasida_odb10 -c ${T} &> busco_braker2_babesia.log\n",
+    "        -l alveolata_odb10 -c ${T} &> busco_braker2_babesia.log\n",
     "\n",
     "# Count number of transcripts by counting FASTA headers\n",
     "echo \"Counting number of protein sequences = transcripts\"\n",
@@ -401,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert code to execute gene finder"
+    "# insert code to execute gene finder, you have to remove this line"
    ]
   },
   {
@@ -411,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert code to analyze results"
+    "# insert code to analyze results, you have to remove this line"
    ]
   },
   {
@@ -437,9 +437,9 @@
     "\n",
     "# run BRAKER1\n",
     "time braker.pl --workingdir=BRAKER1_babesia \\\n",
-    "    --genome=/home/genomics/workshop_materials/genome_annotation/genome/genome.fa \\\n",
-    "    --bam=/home/genomics/workshop_materials/genome_annotation/sra/SRR18907291.s.mapped.bam \\\n",
-    "    --busco_lineage=aconoidasida_odb10 \\\n",
+    "    --genome=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/genome/genome.fa \\\n",
+    "    --bam=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/sra/SRR18907291.s.mapped.bam \\\n",
+    "    --busco_lineage=alveolata_odb10 \\\n",
     "    --AUGUSTUS_BIN_PATH=/usr/bin/ \\\n",
     "    --AUGUSTUS_SCRIPTS_PATH=/usr/share/augustus/scripts/ --threads ${T} \\\n",
     "    --skipOptimize\n",
@@ -461,9 +461,9 @@
     "then\n",
     "    mkdir busco_downloads\n",
     "    cd busco_downloads\n",
-    "    if [ ! -L aconoidasida_odb10 ]\n",
+    "    if [ ! -L alveolata_odb10 ]\n",
     "    then\n",
-    "        ln -s /home/genomics/workshop_materials/genome_annotation/busco/aconoidasida_odb10 aconoidasida_odb10\n",
+    "        ln -s /data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/busco/alveolata_odb10 alveolata_odb10\n",
     "    fi\n",
     "    cd ../\n",
     "fi\n",
@@ -476,7 +476,7 @@
     "\n",
     "# run BUSCO\n",
     "busco -m proteins -i braker.aa -o busco_braker1_babesia \\\n",
-    "        -l aconoidasida_odb10 -c ${T} &> busco_braker1_babesia.log\n",
+    "        -l alveolata_odb10 -c ${T} &> busco_braker1_babesia.log\n",
     "\n",
     "# Count number of transcripts by counting FASTA headers\n",
     "echo \"Counting number of protein sequences = transcripts\"\n",
@@ -505,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert code to run TSEBRA with BRAKER1 and BRAKER2 if you have these results and have time"
+    "# insert code to run TSEBRA with BRAKER1 and BRAKER2 if you have these results and have time, you have to remove this line"
    ]
   },
   {
@@ -515,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert code to run TSEBRA with BRAKER1, BRAKER2, and GALBA if you have these results and have time"
+    "# insert code to run TSEBRA with BRAKER1, BRAKER2, and GALBA if you have these results and have time, you have to remove this line"
    ]
   },
   {
@@ -546,7 +546,7 @@
     "tsebra.py -k ../BRAKER2_babesia/braker.gtf -g ../BRAKER1_babesia/braker.gtf \\\n",
     "    -e ../BRAKER2_babesia/hintsfile.gff,../BRAKER1_babesia/hintsfile.gff -o tsebra.gtf 2> tsebra.log\n",
     "\n",
-    "getAnnoFastaFromJoingenes.py -g /home/genomics/workshop_materials/genome_annotation/genome/genome.fa \\\n",
+    "getAnnoFastaFromJoingenes.py -g /data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/genome/genome.fa \\\n",
     "    -o tsebra -f tsebra.gtf\n",
     "\n",
     "# create links if not already present\n",
@@ -554,9 +554,9 @@
     "then\n",
     "    mkdir busco_downloads\n",
     "    cd busco_downloads\n",
-    "    if [ ! -L aconoidasida_odb10 ]\n",
+    "    if [ ! -L alveolata_odb10 ]\n",
     "    then\n",
-    "        ln -s /home/genomics/workshop_materials/genome_annotation/busco/aconoidasida_odb10 aconoidasida_odb10\n",
+    "        ln -s /data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/busco/alveolata_odb10 alveolata_odb10\n",
     "    fi\n",
     "    cd ../\n",
     "fi\n",
@@ -569,7 +569,7 @@
     "\n",
     "# run BUSCO\n",
     "busco -m proteins -i tsebra.aa -o busco_tsebra_b1_b2 \\\n",
-    "        -l aconoidasida_odb10 -c ${T} &> busco_tsebra_b1_b2.log\n",
+    "        -l alveolata_odb10 -c ${T} &> busco_tsebra_b1_b2.log\n",
     "\n",
     "# Count number of transcripts by counting FASTA headers\n",
     "echo \"Counting number of protein sequences = transcripts\"\n",
@@ -600,7 +600,7 @@
     "tsebra.py -k ../BRAKER2_babesia/braker.gtf -g ../BRAKER1_babesia/braker.gtf,../GALBA_babesia/galba.gtf \\\n",
     "    -e ../BRAKER2_babesia/hintsfile.gff,../BRAKER1_babesia/hintsfile.gff,../GALBA_babesia/hintsfile.gff -o tsebra.gtf 2> tsebra.log\n",
     "\n",
-    "getAnnoFastaFromJoingenes.py -g /home/genomics/workshop_materials/genome_annotation/genome/genome.fa \\\n",
+    "getAnnoFastaFromJoingenes.py -g /data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/genome/genome.fa \\\n",
     "    -o tsebra -f tsebra.gtf\n",
     "\n",
     "# create links if not already present\n",
@@ -608,9 +608,9 @@
     "then\n",
     "    mkdir busco_downloads\n",
     "    cd busco_downloads\n",
-    "    if [ ! -L aconoidasida_odb10 ]\n",
+    "    if [ ! -L alveolata_odb10 ]\n",
     "    then\n",
-    "        ln -s /home/genomics/workshop_materials/genome_annotation/busco/aconoidasida_odb10 aconoidasida_odb10\n",
+    "        ln -s /data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/busco/alveolata_odb10 alveolata_odb10\n",
     "    fi\n",
     "    cd ../\n",
     "fi\n",
@@ -623,7 +623,7 @@
     "\n",
     "# run BUSCO\n",
     "busco -m proteins -i tsebra.aa -o busco_tsebra_b1_b2_g \\\n",
-    "        -l aconoidasida_odb10 -c ${T} &> busco_tsebra_b1_b2_g.log\n",
+    "        -l alveolata_odb10 -c ${T} &> busco_tsebra_b1_b2_g.log\n",
     "\n",
     "# Count number of transcripts by counting FASTA headers\n",
     "echo \"Counting number of protein sequences = transcripts\"\n",
