--- a/GenomeAnnotation.ipynb
+++ b/GenomeAnnotation.ipynb
@@ -83,7 +83,7 @@
     "<details>\n",
     "  <summary><b>🚣 If you want to see how such a file was prepared, click here and read.</b></summary>\n",
     "  \n",
-    "We will map the *Arabidopsis thaliana* Illumina RNA-Seq reads from library SRR934391 in files [SRR934391_1.fastq.gz](/home/genomics/workshop_materials/genome_annotation/sra/SRR934391_1.fastq.gz) and [SRR934391_2.fastq.gz](/home/genomics/workshop_materials/genome_annotation/sra/SRR934391_2.fastq.gz). These are paired-end data, i.e. one file contains the forward reads while the other contains in the same order the reverse reads. The length of reads is in this case 100 nt.\n",
+    "We will map the *Arabidopsis thaliana* Illumina RNA-Seq reads from library SRR934391 in files `SRR934391_1.fastq.gz` and SRR934391_2.fastq.gz. These are paired-end data, i.e. one file contains the forward reads while the other contains in the same order the reverse reads. The length of reads is in this case 100 nt.\n",
     "\n",
     "We will use HiSat2 ([publication](https://doi.org/10.1038/s41587-019-0201-4), [software](https://github.com/DaehwanKimLab/hisat2)) to align these reads against a chunk of the *Arabidopsis thaliana* genome contained in the file [genome.fa](genome.fa). (You can in principle use any alignment tool capable of aligning RNA-seq reads to a genome, as long as it can perform spliced alignment.)\n",
     "\n",
@@ -96,8 +96,7 @@
     "\n",
     "Inspect the log files [hisat2-build.log](hisat2-build.log) and [hisat2-build.err](hisat2-build.err) for possible errors.\n",
     "\n",
-    "Next, we align the RNA-seq reads against the genome. Consider to **not** do this on the Cesky Krumlov Workshop AWS resources. Performing this alignment took about 7 minutes with 70 threads. The precomputed output file is provided at `/home/genomics/workshop_materials/genome_annotation/sra/SRR934391.sam`, and we will continue to use that pre-computed file.\n",
-    "\n",
+    "Next, we align the RNA-seq reads against the genome. Consider to **not** do this on the Workshop resources. Performing this alignment took about 7 minutes with 70 threads. \n",
     "```\n",
     "T=8 # adjust to number of threads that you booted with\n",
     "\n",
@@ -117,7 +116,7 @@
     "\n",
     "T=8 # adjust to number of threads that you booted with, takes ~2 minutes with 4 threads\n",
     "\n",
-    "SAMFILE=/home/genomics/workshop_materials/genome_annotation/sra/SRR934391.sam\n",
+    "SAMFILE=SRR934391.sam\n",
     "\n",
     "time samtools view -@${T} -bSh ${SAMFILE} -o rnaseq.bam\n",
     "\n",
@@ -367,7 +366,7 @@
     "then\n",
     "    mkdir busco_downloads\n",
     "    cd busco_downloads\n",
-    "    ln -s /home/genomics/workshop_materials/genome_annotation/busco/brassicales_odb10 brassicales_odb10\n",
+    "    ln -s /data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/busco/brassicales_odb10 brassicales_odb10\n",
     "    cd ..\n",
     "fi\n",
     "\n",
