adapting to Barcelona

--- a/GenomeAnnotation.ipynb
+++ b/GenomeAnnotation.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfcf2da9",
+   "id": "c54937e6",
    "metadata": {},
    "source": [
     "## ⛵ Annotation of protein coding genes\n",
@@ -159,6 +159,30 @@
     "\n",
     "In the total absence of transcriptome data, we recommend running either BRAKER2 with a large database of proteins, alone, or for larger genomes (such as vertebrates), we the recommend application of GALBA ([preprint](https://www.biorxiv.org/content/10.1101/2023.04.10.536199v1.abstract), [software](https://github.com/Gaius-Augustus/GALBA)) with reference proteomes of a few closely related, already annotated species.\n",
     "\n",
+    "### ⛵ Prepare once for all AUGUSTUS runs in BRAKER & Galba on this machine\n",
+    "\n",
+    "In some Singularity/Apptainer versions - including the one installed on this system - the read-only singularity image is union-mounted with a temporary writable overlay, so the merged filesystem claims to be writeable. Perl's `-w` (via `access(2)`) trusts that merged flag, so it reports “writable” even though any changes land only in the ephemeral overlay and never touch the underlying image. BRAKER and Galba rely on the return value of Perl's `-w` when checking whether a particular directory inside of the container is writable. Since Perl cannot reliably determine that the folder is in fact not writable, we must take one action - exactly once - on this machine before we can proceed. Execute the following code cell (this is not necessary on some other systems where Singularity behaves differently):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "828d9592",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%script bash\n",
+    "if [ ! -d ${HOME}/.augustus ]\n",
+    "then\n",
+    "    cp -r /usr/share/augustus/config ${HOME}/.augustus\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfcf2da9",
+   "metadata": {},
+   "source": [
     "### ⛵ BRAKER3\n",
     "\n",
     "BRAKER3 uses spliced aligned RNA-Seq data from Hisat2 ([paper](https://www.nature.com/articles/s41587-019-0201-4), [software](https://github.com/DaehwanKimLab/hisat2)) for genome-guided transcriptome assembly with Stringtie ([paper](https://www.nature.com/articles/nbt.3122), [software](https://github.com/gpertea/stringtie)). GeneMarkS-T ([paper](https://academic.oup.com/nar/article/43/12/e78/2902598), [software](http://exon.gatech.edu/genemark/license_download.cgi)) is used to call protein coding genes in the transcripts. These transcripts are \"noisy\", therefore, a large database of proteins (e.g. an OrthoDB partition) is used to filter these predictions, using among other GeneMark-specific scripts including ProtHint ([software](https://github.com/gatech-genemark/ProtHint)) with Spaln ([paper](https://academic.oup.com/bioinformatics/article/24/21/2438/191484), [software](https://github.com/ogotoh/spaln)) the fast search tool DIAMOND ([paper](https://www.nature.com/articles/s41592-021-01101-x), [software](https://github.com/bbuchfink/diamond)). Both, the transcriptome and protein evidence is then used by GeneMark-ETP ([preprint](https://www.biorxiv.org/content/10.1101/2023.01.13.524024v1), [software](https://github.com/gatech-genemark/GeneMark-ETP)) for self-training this HMM-based gene finder. This generates a training set for AUGUSTUS ([paper](https://doi.org/10.1093/bioinformatics/btn013), [software](https://github.com/Gaius-Augustus/Augustus)). Both, the GeneMark-ETP, and the AUGUSTUS gene set incorporate the evidence to some extent, and these gene sets are merged with TSEBRA by BRAKER3.\n",
@@ -177,7 +201,7 @@
    "source": [
     "%%script bash\n",
     "\n",
-    "T=8 # adjust to number of threads that you booted with, takes ~14 minutes with 8 threads\n",
+    "T=8 # adjust to number of threads that you booted with, takes ~10 minutes with 8 threads\n",
     "\n",
     "# delete output from a possible previous run if it exists\n",
     "if [ -d BRAKER3 ]\n",
@@ -186,12 +210,13 @@
     "fi\n",
     "\n",
     "ORTHODB=/opt/BRAKER/example/subsampled_viri.fa # adjust to suitable clade of real OrthoDB from https://bioinf.uni-greifswald.de/bioinf/partitioned_odb11/\n",
-    "BUSCOLINEAGE=eukaryota_odb10 # adjust to more suitable lineage for real annotation runs\n",
+    "BUSCOLINEAGE=eukaryota_odb10 # adjust to more suitable lineage for real annotation runs, here picked lineage saves time\n",
     "\n",
     "# run BRAKER3\n",
     "time braker.pl --workingdir=BRAKER3 --genome=/opt/BRAKER/example/genome.fa \\\n",
     "    --bam=/opt/BRAKER/example/RNAseq.bam \\\n",
     "    --prot_seq=${ORTHODB} --busco_lineage=${BUSCOLINEAGE} --threads ${T} \\\n",
+    "    --AUGUSTUS_CONFIG_PATH=${HOME}/.augustus \\\n",
     "    --gm_max_intergenic 10000 --skipOptimize # remember to remove both these options for real jobs!"
    ]
   },
@@ -329,7 +354,9 @@
     "\n",
     "`cellular organisms; Eukaryota; Viridiplantae; Streptophyta; Streptophytina; Embryophyta; Tracheophyta; Euphyllophyta; Spermatophyta; Magnoliopsida; Mesangiospermae; eudicotyledons; Gunneridae; Pentapetalae; rosids; malvids; Brassicales; Brassicaceae; Camelineae`\n",
     "\n",
-    "Now find a related lineage in [busco_lineages.txt](busco_lineages.txt). `brassicales_odb10` is the closest lineage. (If we had not wanted to save time when running BRAKER, we would also have used this lineage for the BRAKER run.)\n",
+    "Now find a related lineage in [busco_lineages.txt](busco_lineages.txt), and in real life, you would continue to use that.\n",
+    "\n",
+    "For reasons of runtime, we will use an older and slightly outdated lineage for this workshop: `brassicales_odb10`. (If we had not wanted to save time when running BRAKER, we would also have used more suitable lineage than `eukaryota_odb10` for the BRAKER run.)\n",
     "\n",
     "Next, we run a BUSCO assessment on all gene sets (this takes ~4 minutes with 8 threads):"
    ]
@@ -437,7 +464,7 @@
     "\n",
     "BRAKER2 ([paper](https://doi.org/10.1093/nargab/lqaa108)) uses spliced alignment information from a huge database of proteins against the target genome. We typically use OrthoDB partitions of clades, hosted at https://bioinf.uni-greifswald.de/bioinf/partitioned_odb11/. Note: a set of proteins from one or a few related species is not sufficient for running BRAKER2. A particular set of proteins of a closely related species can be appended to a larger database for running BRAKER2. However, BRAKER2 is not an ideal tool for recovering a complete set of proteins from a related species.\n",
     "\n",
-    "The following call of BRAKER2 takes ~14 minutes on 8 threads:"
+    "The following call of BRAKER2 takes ~10 minutes on 8 threads:"
    ]
   },
   {
@@ -462,6 +489,7 @@
     "\n",
     "time braker.pl --workingdir=BRAKER2 --genome=/opt/BRAKER/example/genome.fa --prot_seq=${ORTHODB} \\\n",
     "    --busco_lineage ${BUSCOLINEAGE} --threads ${T} \\\n",
+    "    --AUGUSTUS_CONFIG_PATH=${HOME}/.augustus \\\n",
     "    --gm_max_intergenic 10000 --skipOptimize \\ # remember to remove both options if you are running a real job\n",
     "    2> braker2.log"
    ]
@@ -499,7 +527,7 @@
     "\n",
     "### ⛵ GALBA\n",
     "\n",
-    "GALBA ([preprint](https://www.biorxiv.org/content/10.1101/2023.04.10.536199v1.abstract), [software](https://github.com/Gaius-Augustus/GALBA)) is a BRAKER-spinoff that uses miniprot ([paper](https://doi.org/10.1093/bioinformatics/btad014), [software](https://github.com/lh3/miniprot)) to generate a training gene set of AUGUSTUS. In contrast to the BRAKER2 and BRAKER3 pipelines, GALBA is not very good at using remotely related protein evidence. However, given reference proteins of several closely related species, GALBA is very good at recovering gene structures, particularly in large vertebrate genomes. You may execute GALBA as follows (using a toy example data set, it executes within a 5 minutes on 8 threads):"
+    "GALBA ([preprint](https://www.biorxiv.org/content/10.1101/2023.04.10.536199v1.abstract), [software](https://github.com/Gaius-Augustus/GALBA)) is a BRAKER-spinoff that uses miniprot ([paper](https://doi.org/10.1093/bioinformatics/btad014), [software](https://github.com/lh3/miniprot)) to generate a training gene set of AUGUSTUS. In contrast to the BRAKER2 and BRAKER3 pipelines, GALBA is not very good at using remotely related protein evidence. However, given reference proteins of several closely related species, GALBA is very good at recovering gene structures, particularly in large vertebrate genomes. You may execute GALBA as follows (using a toy example data set, it executes within a 3 minutes on 8 threads):"
    ]
   },
   {
@@ -522,6 +550,7 @@
     "time galba.pl --workingdir=GALBA --genome=/opt/BRAKER/example/genome.fa \\\n",
     "    --prot_seq=/opt/GALBA/example/proteins.fa \\\n",
     "    --threads ${T} \\\n",
+    "    --AUGUSTUS_CONFIG_PATH=${HOME}/.augustus \\\n",
     "    --skipOptimize \\ # remember to remove this option if you are running a real job\n",
     "    2> galba.log"
    ]
@@ -565,7 +594,7 @@
     "\n",
     "BRAKER1 uses spliced alignment information from RNA-Seq for training GeneMark-ET ([paper](https://doi.org/10.1093/nar/gku557), [software](http://exon.gatech.edu/genemark/license_download.cgi)), for selecting a training gene set for AUGUSTUS, and for predicting genes with AUGUSTUS. \n",
     "\n",
-    "We will run BRAKER1 to predict genes in the genomic sequence with the prepared RNA-Seq intron evidence. As before, we introduce options to save runtime (see BRAKER3 and BRAKER2) that should not be applied in a real-life annotation project."
+    "We will run BRAKER1 to predict genes in the genomic sequence with the prepared RNA-Seq intron evidence. As before, we introduce options to save runtime (see BRAKER3 and BRAKER2) that should not be applied in a real-life annotation project. Takes ~5 minutes with 8 threads."
    ]
   },
   {
@@ -577,7 +606,7 @@
    "source": [
     "%%script bash\n",
     "\n",
-    "T=8 # adjust to number of threads that you booted with, takes 10 minutes on 8 threads\n",
+    "T=8 # adjust to number of threads that you booted with, takes 5 minutes on 8 threads\n",
     "\n",
     "# delete output from a possible previous run if it exists\n",
     "if [ -d BRAKER1 ]\n",
@@ -590,6 +619,7 @@
     "time braker.pl --workingdir=BRAKER1 --genome=/opt/BRAKER/example/genome.fa \\\n",
     "    --bam=/opt/BRAKER/example/RNAseq.bam --softmasking \\\n",
     "    --busco_lineage ${BUSCOLINEAGE} --threads ${T} \\\n",
+    "    --AUGUSTUS_CONFIG_PATH=${HOME}/.augustus \\\n",
     "    --gm_max_intergenic 10000 --skipOptimize #  remember to remove this option if you are running a real job"
    ]
   },
@@ -611,8 +641,6 @@
     "cp -r BRAKER1_precomputed_results BRAKER1\n",
     "```\n",
     "</details>\n",
-    "\n",
-    "Note that BRAKER by default expects scripts and binaries in a location relative to the `$AUGUSTUS_CONFIG_PATH`. We here changed the location of the `$AUGUSTUS_CONFIG_PATH` to a writable location. Therefore, we have to tell BRAKER where the scripts and binaries are (`--AUGUSTUS_BIN_PATH`, `--AUGUSTUS_CONFIG_PATH`).\n",
     "\n",
     "The most important output files that we will later use for running TSEBRA are \n",
     "\n",
