--- a/Annotate_Babesia_duncani.ipynb
+++ b/Annotate_Babesia_duncani.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "print(\"You are in group \", random.randint(1,5))"
+    "print(\"You are in group \", random.randint(1,4))"
    ]
   },
   {
@@ -96,7 +96,7 @@
     "\n",
     "## Task for group 1: Apply GALBA\n",
     "\n",
-    "Use the following code cell to implement the application of GALBA, and execute GALBA. Use the genome file and the proteins.fa file mentioned, above. Apply `--skipOptimize`. (Expected runtime: ~7 minutes with 8 threads.)"
+    "Use the following code cell to implement the application of GALBA, and execute GALBA. Use the genome file and the proteins.fa file mentioned, above. Apply `--skipOptimize`. (Expected runtime: ~5 minutes with 8 threads.)"
    ]
   },
   {
@@ -141,6 +141,7 @@
     "\n",
     "time galba.pl --workingdir=GALBA_babesia --genome=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/genome/genome.fa \\\n",
     "    --prot_seq=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/proteins/proteins.fa \\\n",
+    "    --AUGUSTUS_CONFIG_PATH=${HOME}/.augustus \\\n",
     "    --threads=${T} \\\n",
     "    --skipOptimize\n",
     "```\n",
@@ -191,7 +192,7 @@
     "\n",
     "## Task for group 2: Apply BRAKER3\n",
     "\n",
-    "Use the following code cell to implement the application of BRAKER3, and execute BRAKER3. Use the genome file, the OrthoDB Alveolata file, the proteins.fa file, and the Merged.bam file mentioned, above. Apply `--skipOptimize`. Do not apply `--gm_max_intergenic 10000`. (Expected runtime: ~25 minutes with 8 threads.)"
+    "Use the following code cell to implement the application of BRAKER3, and execute BRAKER3. Use the genome file, the OrthoDB Alveolata file, the proteins.fa file, and the Merged.bam file mentioned, above. Apply `--skipOptimize`. Do not apply `--gm_max_intergenic 10000`. (Expected runtime: ~15 minutes with 8 threads.)"
    ]
   },
   {
@@ -227,7 +228,7 @@
     "```\n",
     "%%script bash\n",
     "\n",
-    "T=8 # adjust to number of threads that you booted with, takes ~30 minutes with 4 threads\n",
+    "T=8 # adjust to number of threads that you booted with\n",
     "\n",
     "# delete output from a possible previous run if it exists\n",
     "if [ -d BRAKER3_babesia ]\n",
@@ -242,6 +243,7 @@
     "    --bam=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/sra/SRR18907291.s.mapped.bam \\\n",
     "    --prot_seq=${ORTHODB},/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/proteins/proteins.fa \\\n",
     "    --busco_lineage=alveolata_odb10 --threads ${T} \\\n",
+    "    --AUGUSTUS_CONFIG_PATH=${HOME}/.augustus \\\n",
     "    --skipOptimize\n",
     "```\n",
     "\n",
@@ -291,7 +293,7 @@
     "\n",
     "## Task for group 3: Apply BRAKER2\n",
     "\n",
-    "Use the following code cell to implement the application of BRAKER2, and execute BRAKER2. Use the genome file, the OrthoDB Alveolata file mentioned, above. Apply `--skipOptimize`. Do not apply `--gm_max_intergenic 10000`. (Expected runtime: ~40 minutes with 8 threads.)"
+    "Use the following code cell to implement the application of BRAKER2, and execute BRAKER2. Use the genome file, the OrthoDB Alveolata file mentioned, above. Apply `--skipOptimize`. Do not apply `--gm_max_intergenic 10000`. (Expected runtime: ~30 minutes with 8 threads.)"
    ]
   },
   {
@@ -327,7 +329,7 @@
     "```\n",
     "%%script bash\n",
     "\n",
-    "T=8 # adjust to number of threads that you booted with, takes ~30 minutes with 4 threads\n",
+    "T=8 # adjust to number of threads that you booted with\n",
     "\n",
     "# delete output from a possible previous run if it exists\n",
     "if [ -d BRAKER2_babesia ]\n",
@@ -342,6 +344,7 @@
     "    --genome=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/genome/genome.fa \\\n",
     "    --prot_seq=${ORTHODB},/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/proteins/proteins.fa \\\n",
     "    --busco_lineage=alveolata_odb10 --threads ${T} \\\n",
+    "    --AUGUSTUS_CONFIG_PATH=${HOME}/.augustus \\\n",
     "    --skipOptimize\n",
     "```\n",
     "\n",
@@ -391,7 +394,7 @@
     "\n",
     "## Task for group 4: Apply BRAKER1\n",
     "\n",
-    "Use the following code cell to implement the application of BRAKER1, and execute BRAKER1. Use the genome file and the Merged.bam file mentioned, above. Apply `--skipOptimize`. Do not apply `--gm_max_intergenic 10000`. (Expected runtime: ~10 minutes.)"
+    "Use the following code cell to implement the application of BRAKER1, and execute BRAKER1. Use the genome file and the Merged.bam file mentioned, above. Apply `--skipOptimize`. Do not apply `--gm_max_intergenic 10000`. (Expected runtime: ~12 minutes with 8 threads.)"
    ]
   },
   {
@@ -427,7 +430,7 @@
     "```\n",
     "%%script bash\n",
     "\n",
-    "T=8 # adjust to number of threads that you booted with, takes ~30 minutes with 4 threads\n",
+    "T=8 # adjust to number of threads that you booted with\n",
     "\n",
     "# delete output from a possible previous run if it exists\n",
     "if [ -d BRAKER1_babesia ]\n",
@@ -439,9 +442,8 @@
     "time braker.pl --workingdir=BRAKER1_babesia \\\n",
     "    --genome=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/genome/genome.fa \\\n",
     "    --bam=/data/classes/ibe_genann2025/shared_data/hoff_classes/GenomeAnnotation_Workshop_Barcelona/DATA/sra/SRR18907291.s.mapped.bam \\\n",
-    "    --busco_lineage=alveolata_odb10 \\\n",
-    "    --AUGUSTUS_BIN_PATH=/usr/bin/ \\\n",
-    "    --AUGUSTUS_SCRIPTS_PATH=/usr/share/augustus/scripts/ --threads ${T} \\\n",
+    "    --busco_lineage=alveolata_odb10 --threads ${T} \\\n",
+    "    --AUGUSTUS_CONFIG_PATH=${HOME}/.augustus \\\n",
     "    --skipOptimize\n",
     "```\n",
     "\n",
